# my-Trading-Agents

./: .env.example  .env.monitoring.example  .gitignore  .pre-commit-config.yaml  ATTRIBUTION.md  CLIENT_MIGRATION_DOCUMENTATION_COMPLETE.md  COMPREHENSIVE-ROADMAP.md  CONTINUATION-CONTEXT.md  COPILOT_INSTRUCTIONS.md  CURRENT-STATUS-AUG28.md  DOCKER-CLI-TEST-README.md  DOCKER-README.md  DOCUMENTATION-INDEX.md  FEATURE-FLAGS.md  FINAL-COMPLETION-REPORT.md  FINAL-HANDOFF-SUMMARY.md  LANGCHAIN-MIGRATION-PLAN.md  MACHINE-HANDOFF-PAUSE.md  MACHINE-HANDOFF.md  MACHINE-MIGRATION-2025-08-30.md  MACHINE-MIGRATION-CONTEXT.md  PROJECT-STATUS-SUMMARY.md  PROJECT-STATUS.md  PULL_REQUEST_ADVANCED_MEMORY.md  PULL_REQUEST_DESCRIPTION.md  README.md  SECURITY-AUDIT-REPORT.md  SECURITY_REMEDIATION_REPORT.md  audit-report.json  docker-compose.local-stack.yml  docker-compose.local.yml  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.yml  package-lock.json  start-all-services-clean.ps1  start-all-services-simple.ps1  start-all-services.sh  start-zep-graphiti.ps1  stop-all-services.ps1
py_zep/: .env.example  .env.local.example  .gitignore  DEV-SETUP.md  Dockerfile  ENTITY_NODE_COMPLETION_REPORT.md  NEO4J_SECURITY_GUIDE.md  README.md  SETUP_SCRIPT_FIX.md  api_spec.json  debug_endpoint.py  docker-compose.yml  final_compliance_scan.py  lm-studio-diagnostic.py  pyproject.toml  start-services-secure.ps1  start-services-secure.sh  start-zep-services.ps1  start_service.py  temp-start-services.bat  test_chat.json  test_embedding.json  test_endpoint.py  test_entity.json  (+5 more)
(+1199 files in other folders)
